# NL2SQL

./: .gitignore  CLAUDE.md  Implementation_Guide_Constrained_Hardware.md  Implementation_Prompts.md  New_NL2SQL_method_plan.md  Phase1_implementation_details.md  README.md  implementation_progress.json  pyproject.toml  requirements.txt
checkpoint_A_review/: README.md
checkpoint_A_review/unit_test_results/: test_results.txt
checkpoint_B_review/: README.md  inspect_results.py  inspection_report.txt
checkpoint_D_review/: inspection_report.md  results.json
checkpoint_E_review/: checkpoint_e_results.json  inspection_report.md  inspection_report_v5.md  inspection_report_v6.md
references/: agentar_scale_sql.md  automatic_metadata_extraction_for_text_to_sql.md  chase_sql_multi_path_reasoning_and_preference_optimized_candidate_selection_in_text_to_sql.md  xiyan_sql_a_novel_multi_generator_framework_for_text_to_sql.md
references/analysis/: agentar_scale_sql_analysis.md  (+3 more)
scripts/: analyze_results.py  checkpoint_d_analysis.py  checkpoint_e_test.py  rebuild_lsh_indexes.py  run_checkpoint_c.py  run_checkpoint_d.py  run_evaluation.py  run_offline_preprocessing.py  run_smoke_test.py  smoke_test_66q.sh  smoke_test_fixes.py  test_generator_improvements.py  test_max_tokens_fix.py  test_p02_grounding_fallback.py  test_p0_b1_max_tokens.py  test_p11_b1_temperature.py  test_p13_fk_annotations.py  test_p13_s1_cap.py  test_p14_s2_skip.py  test_p29_sentence_transformer_singleton.py  test_verification_llm_calls.py
src/cache/: cache_manager.py
src/llm/: base.py  (+4 more)
tests/: conftest.py
(+60 files in other folders)
